Adding Background Chapter on the Blockchain

--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -1,3 +1,19 @@
+@misc{Stinchcombe2017,
+author = {Stinchcombe, Kai},
+mendeley-groups = {ComSys Seminar},
+title = {{Ten years in, nobody has come up with a use for blockchain}},
+url = {https://hackernoon.com/ten-years-in-nobody-has-come-up-with-a-use-case-for-blockchain-ee98c180100},
+urldate = {2019-04-06},
+year = {2017}
+}
+@misc{Nielsen2018,
+author = {Nielsen, Robert},
+mendeley-groups = {ComSys Seminar},
+title = {{The Blockchain Is A Solution In Search Of A Problem – Whistling In The Wind}},
+url = {https://whistlinginthewind.org/2018/06/13/the-blockchain-is-a-solution-in-search-of-a-problem/},
+urldate = {2019-04-06},
+year = {2018}
+}
 @article{Mannhart2018,
 author = {Mannhart, Stephan and Rodrigues, Bruno and Scheid, Eder and Kanhere, Salil S. and Stiller, Burkhard},
 doi = {10.1109/DASC/PiCom/DataCom/CyberSciTec.2018.00070},
