--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -1,3 +1,12 @@
+@misc{Economist2015,
+author = {Economist, The},
+mendeley-groups = {ComSys Seminar},
+title = {{The Trust Machine}},
+url = {https://www.economist.com/leaders/2015/10/31/the-trust-machine},
+urldate = {2019-04-06},
+year = {2015}
+}
+
 @misc{Stinchcombe2017,
 author = {Stinchcombe, Kai},
 mendeley-groups = {ComSys Seminar},
