--- a/Talk7/02_background/02-2_blockchain.tex
+++ b/Talk7/02_background/02-2_blockchain.tex
@@ -7,7 +7,10 @@ In the following subsection the Blockchain technology itself, its advantages and
 
 \subsubsection{The Blockchain in Detail}
 The Blockchain is a shared, trusted, publicly available and inspectable online ledger containing a chain of interlinked blocks holding information. Important hereby is the fact that no single user controls, updates or maintains the blockchain. Instead every action performed on the blockchain is following strict rules and a consensus amongst all users that access it \cite{Shackelford2016}. Because of the way its blocks are interlinked by a cryptographic hash, the Blockchain is tamperproof in the sense that no changes can be made in hindsight without being traceable. 
+More technically \cite{BenAyed2017}!
 Each of the blocks within the Blockchain is itself is a datastructure.  This datastructure allows to store transactions between peers. Transactions can refer to any kind of digital or real world transaction between two or multiple people \cite{Wust2017}.
+
+
 
 And herein lies the real fascination of the Blockchain mechanism, as it represents a platform or more generally a datastructure that allows humans and computers to interact with each other, without having to rely upon trusted third parties. Instead it is the controlling power of the datastructure itself or put differently, the consensus amongst all users, that assures each parties compliance with their part of a deal. As a results, it allows "people who have no particular confidence in each other [to] collaborate without having to go through a neutral central authority" and becomes "a machine that creates trust" (\cite{Economist2015} as cited in \cite{Shackelford2016}).
 \subsubsection{Properties of the Blockchain}
@@ -18,22 +21,20 @@ The Blockchain has the major advantage that multiple desired properties of a dat
 	\item \textbf{Transparency \& Privacy}: The Blockchain and its transactions can be viewed by everyone with access to it. But the more transparent data is, the less private it becomes. Therefore an area of conflict exists between these two properties. For each individual use case it has to be decided where in between the extreme cases of a fully transparent and a fully private Blockchain it lies.
 	
 	\item \textbf{Redundancy}: The Blockchain reduces the chances of loosing data by its distributed nature itself. Each peer containes parts of the whole Blockchain locally. The chance that data gets lost is therefore extremely small. To achieve this in centralized systems, multiple copies of the data have to be stored in different places (e.g. in different physical locations).
+	\item \textbf{Anonimity}: 
 \end{itemize}
 Depending on the use case e.g. whether privacy is desired or not, a Blockchain can be the right or the wrong choice. Nevertheless it provides a handful of advantages over traditional datastructures by beeing decentralized and public. The farther away from those properties one tries to push the design of a Blockchain, the more one has to ask, whether a Blockchain is the best idea for a specific application.
-\subsubsection{Reason for popularity}
 
 \subsubsection{Common scenarios for usage}
-\subsubsection{The Blockchain and Cybersecurity}
-
-
+The Blockchain per se is nothing else than a very sophisticated and yet simple datastructure. But due to its various properties its range of usage did not just end with on the boundaries of the digital world but started to conquer other areas and fields as well. Even though the below list is neither exhaustive nor its items disjunct, it shows the most common scenarios for the use of the Blockchain\cite{Wust2017}:
 \begin{itemize}
-\item Test
-  \subitem Crypto-Currencies
-  \subitem Supply Chain Management (SCM)
-  \subitem Payment and Money Transactions
-  \subitem Smart Contracts
-  \subitem Decentralized Autonomous Organizations (DAO)
-  \subitem Proof of Ownership
-  \subitem E-Voting
-  \subitem IoT
+  \item Crypto Currencies: From the moment, when the paper by \citeauthor{Nakamoto2008} was published Blockchains and Crypto Currencies were interlinked. Because a Crypto Currency is per definition a digital asset, the Blockchain suites this use case particularly well.
+  \item Supply Chain Management (SCM): In Supply Chain Management the flow of materials and services is managed. This flow of goods includes "various intermediate storage and production cycles" \cite{Wust2017} and therefore has a high complexity. The wish that data can be accessed and verified  by all actors without the need of a trusted third party leads quickly to the idea of using the Blockchain as a way to store and monitor all processes in a tamperproof manner.
+  \item Payment and Money Transactions: Transactions between different banks and the resulting temporary debts between them are traditionally solved by using \textit{Nostro} accounts and by making use of central banks in order to minimize risks. Therefore, for a single transaction multiple parties have to be included. Even more parties would be included if transactions were international. This high complexity leads to long transaction confirmation time and additional costs. These issues can be solved using \textit{Distributed Ledger Technologies}, that make use of a Blockchain to settle debts. The bank then deposits some amount of money with another bank and receives in return the same amount in the Blockchain.
+  \item Smart Contracts: "Smart contracts are digital contracts that are self enforcing" and run on the Blockchain as a "distributed state machine" \cite{Wust2017}. They therefore do not rely upon a trusted third party. Even though they are listed as common use scenario for the Blockchain, their use is not limited to a specific field.
+  \item Decentralized Autonomous Organizations (DAO): "A DAO is an organization that is run autonomously through a set of smart contracts" \cite{Wust2017} and there is therefore no central controlling unit or management. A DAO is fundamentally dependent of the Blockchain, as it relies on a decentralized governance of funds enforced by Smart Contracts.
+  \item Proof of Ownership: The idea of proofing the intellectual property is one of the most straightforward use cases for the Blockchain. In this scenario, the user registers his or her property (e.g image, text or other object) through the use of an identity function such as a hash in the Blochchain. "While this does not fully prove ownership, it does provide evidence of owenership if no one else can show that the object was previously published" \cite{Wust2017}.
+  \item E-Voting: 
+  \item IoT
 \end{itemize}
+\subsubsection{The Blockchain and Cybersecurity}
