Adding Background Chapter on the Blockchain - Finished draft

--- a/Talk7/02_background/02-2_blockchain.tex
+++ b/Talk7/02_background/02-2_blockchain.tex
@@ -1,7 +1,7 @@
 \subsection{Blockchain}
 \label{subsec:02_blockchain}
 
-Connected to the growing popularity of the Bitcoin Crpytocurrency that conquered the markets of the world, the interest for its underlying technology - the Blockchain - grew in a similar manner. The idea of having a fully decentralized, tamperproofed distributed online ledger was starting to not only conquer the digital business world but also other fields like property management and personal data management. And while Bitcoin itself gained a lot of bad reputation due to its fluctuation \cite{Shackelford2016}, the Blockchain on the contrary continued its triumphal procession until to day and up to a point where one might ask himself: Is the Blockchain a solution for existing problems or is the Blockchain the problem itself? \cite{Stinchcombe2017} \cite{Nielsen2018}
+Connected to the growing popularity of the Bitcoin Crpytocurrency that conquered the markets of the world, the interest for its underlying technology - the Blockchain - grew in a similar manner. The idea of having a fully decentralized, tamperproofed distributed online ledger was starting to not only conquer the digital business world but also other fields like property management and personal data management. And while Bitcoin itself gained a lot of bad reputation due to its fluctuation \cite{Shackelford2016}, the Blockchain on the contrary continued its triumphal procession until to day and up to a point where one might ask himself: Is the Blockchain a solution for existing problems or is the Blockchain the problem itself? \cite{Stinchcombe2017} \cite{Nielsen2018} \cite{Lunn2015}
 
 In the following subsection the Blockchain technology itself, its advantages and disadvantages, the reason for its popularity as well as its usage are going to be explained in detail. Nevertheless it is not the goal of this section to give full technical insights into the various mechanisms of the blockchain nor its mathematical background, but to provide a good base of knowledge for the chapters to come.
 
@@ -33,8 +33,10 @@ The Blockchain per se is nothing else than a very sophisticated and yet simple d
   \item Payment and Money Transactions: Transactions between different banks and the resulting temporary debts between them are traditionally solved by using \textit{Nostro} accounts and by making use of central banks in order to minimize risks. Therefore, for a single transaction multiple parties have to be included. Even more parties would be included if transactions were international. This high complexity leads to long transaction confirmation time and additional costs. These issues can be solved using \textit{Distributed Ledger Technologies}, that make use of a Blockchain to settle debts. The bank then deposits some amount of money with another bank and receives in return the same amount in the Blockchain.
   \item Smart Contracts: "Smart contracts are digital contracts that are self enforcing" and run on the Blockchain as a "distributed state machine" \cite{Wust2017}. They therefore do not rely upon a trusted third party. Even though they are listed as common use scenario for the Blockchain, their use is not limited to a specific field.
   \item Decentralized Autonomous Organizations (DAO): "A DAO is an organization that is run autonomously through a set of smart contracts" \cite{Wust2017} and there is therefore no central controlling unit or management. A DAO is fundamentally dependent of the Blockchain, as it relies on a decentralized governance of funds enforced by Smart Contracts.
-  \item Proof of Ownership: The idea of proofing the intellectual property is one of the most straightforward use cases for the Blockchain. In this scenario, the user registers his or her property (e.g image, text or other object) through the use of an identity function such as a hash in the Blochchain. "While this does not fully prove ownership, it does provide evidence of owenership if no one else can show that the object was previously published" \cite{Wust2017}.
-  \item E-Voting: 
-  \item IoT
+  \item Proof of Ownership: The idea of proofing the intellectual property is one of the most straightforward use cases for the Blockchain. In this scenario, the user registers his or her property (e.g image, text or other object) through the use of an identity function such as a hash in the Blochchain. "While this does not fully prove ownership, it does provide evidence of owenership if no one else can show that the object was previously published" \cite{Wust2017}. As a special case, also the registration of land titles and property registration falls into this use case scenario: In countries where corruption dominates the integriy of official documents, the Blockchain can be used ro first register land or property and later validate a specific claim for a piece of land.
+  \item E-Voting: Many desired properties connected to e-Voting are congruent with the Blockchains properties others are not. While the Blockchain can fulfill many E-Voting requirements such as public verifiability and the involvement of many parties that do not trust each other into one process, it cannot fulfill the privacy aspect of a Voting without the need of other mechanisms. Therefore multiple solutions exist, but none has been shown to be secure, verifiable and private at the same time.
+  \item IoT: Another possible use case for the Blockchain technology is the combination of Smart Contracts and the Internet of Things. It allows different IoT-devices to acutally interact with each other and autonomously exchange information and goods on the basis of the Blockchain.
 \end{itemize}
 \subsubsection{The Blockchain and Cybersecurity}
+The application of the Blockchain to the topic of Cybersecurity is twofold: In most cases the Blockchain technology is used within applications of any sorts and kinds to make them more secure. More secure databases, transaction systems for banks, the replacement of Certificate Authorities or the security of critical physical infrastructures such as atomic plants or the power grid fall into this category. Another field of applications, even though less often seen uses the blockchain directly to mitigate cyberattacks. Examples are the mitigation of DDoS Attacks or the handlich of PKI related cyberthreats through the use of the Blockchain technology. These applications that fall into the second category, use the Blockchain more directly and immediate, while the first category uses them on a higher level, to help reducing the cybersecurity threats due to the set up of the application itself with use of the Blockchain.
+In this paper both of those categories are discussed and explained.   
