--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -1,3 +1,13 @@
+@misc{Lunn2015,
+author = {Lunn, Bernard},
+booktitle = {Daily Fintech},
+mendeley-groups = {ComSys Seminar},
+title = {{Bitcoin Blockchain could solve the cyber security challenge for Banks}},
+url = {https://dailyfintech.com/2015/10/30/bitcoin-blockchain-could-solve-the-cyber-security-challenge-for-banks/},
+urldate = {2019-04-06},
+year = {2015}
+}
+
 @misc{Economist2015,
 author = {Economist, The},
 mendeley-groups = {ComSys Seminar},
@@ -550,6 +560,7 @@ title = {{Metadisk: Blockchain-Based Decentralized File Storage Application}},
 volume = {14},
 year = {1993}
 }
+
 @article{Kent2014,
 author = {Kent, S and Chi, A},
 pages = {1--20},
