Adding Applications Chapter Draft

--- a/Talk7/03_related_work/03-5_applications.tex
+++ b/Talk7/03_related_work/03-5_applications.tex
@@ -3,25 +3,38 @@
 
 \textbf{Length: 3-4 pages}
 
-In this section we take a closer look at applications that are linked to cybersecurity on a secondary level: Here the BC is not per se used to mitigate direct cybersecurity threats, but is used to make applications more robust, error-prone and less vulnerable. So the BC does solve cybersecurity related issues, but in a more indirect way.
+In this section we take a closer look at applications that are linked to cybersecurity on a secondary level: Here the Blockchain is not per se used to mitigate direct cybersecurity threats, but is used to make applications more robust, error-prone and less vulnerable. So the Blockchain does solve cybersecurity related issues, but in a more indirect way.
 
-\begin{itemize}
-\item Applications that are related on a second level
-\item Not a direct implication for CS measures
-\item Instead, BC helps to secure the security of a system
-Different classes of applications:
-\item Applications related to the fields of evaluated according to the following criteria:
-\subitem Quality of the System: Advantages and Disadvantages
-\subitem Is there an absolute need for BC or could this problem be solved without?
-\subitem Relation to Cybersecurity and Security of related systems
-\item The following sections are to be explored further
-\subitem E-Voting \cite{Osgood2016} \cite{BenAyed2017}
-\subitem Automonous Vehicles \cite{Dorri2017} \cite{Rowan2017}
-\subitem Personal Data Protection \cite{Zyskind2015}
-\subitem Personal Data Sharing and Patient Monitoring \cite{Yue2016}
-\subitem Smart Cities and IoT \cite{Biswas2016}
-\subitem Communication \cite{Rowan2017}
-\subitem Power Transaction
-\subitem Data Exchange
+\subsubsection{Assessment Criteria}
+Below we want to introduce multiple different scenarios of applications (existing or proof-of-work drafts) for the Blockchain technology and apart from a brief introduction of the challenges and problems of this specific field, answer the following questions:
+\begin{enumerate}
+	\item What is the quality of this specific type of application regarding cybersecurity? 
+	\item How do they make use of the Blockchain Technology?
+	\item Is the BC really needed or could the problems be solved without it? 
+\end{enumerate}
+To answer question number 3 we are going to make use of the below schema presented by \citeauthor{Wust2017} in \cite{Wust2017}, that helps spliting real use cases from unnecessary ones.
+\begin{figure}[ht!]
+  \begin{center}
+  \includegraphics[scale=0.6]{Talk7/img/app/BCorNot}
+  \end{center}
+  \caption{Do you need a Blockchain?}
+  \label{blockchain_or_not}
+\end{figure}
 
-\end{itemize}
+\subsubsection{E-Voting}
+\cite{Osgood2016} \cite{BenAyed2017}
+\subsubsection{Autonomous Vehicles}
+\cite{Dorri2017} \cite{Rowan2017}
+\subsubsection{Personal Data Protection}
+\cite{Zyskind2015}
+
+\subsubsection{Personal Data Sharing and Patient Monitoring}
+\cite{Yue2016}
+
+\subsubsection{Smart Cities \& IoT}
+\cite{Biswas2016}
+\subsubsection{Communication}
+\cite{Rowan2017}
+\subsubsection{Power Transaction}
+\subsubsection{Data Exchange}
+
