Adds Beginning of Chaper 3 - Applications and all included papers

--- a/Talk7/03_related_work/03-5_applications.tex
+++ b/Talk7/03_related_work/03-5_applications.tex
@@ -1,8 +1,6 @@
 \subsection{Specific Applications}
 \label{subsec:03_applications}
 
-\textbf{Length: 3-4 pages}
-
 In this section we take a closer look at applications that are linked to cybersecurity on a secondary level: Here the Blockchain is not per se used to mitigate direct cybersecurity threats, but is used to make applications more robust, error-prone and less vulnerable. So the Blockchain does solve cybersecurity related issues, but in a more indirect way.
 
 \subsubsection{Assessment Criteria}
@@ -22,19 +20,35 @@ To answer question number 3 we are going to make use of the below schema present
 \end{figure}
 
 \subsubsection{E-Voting}
-\cite{Osgood2016} \cite{BenAyed2017}
+\begin{itemize}
+	\item \cite{Osgood2016}
+	\item  \cite{BenAyed2017}
+	\item Conclusion by \cite{Wust2017} point F
+\end{itemize}
 \subsubsection{Autonomous Vehicles}
-\cite{Dorri2017} \cite{Rowan2017}
-\subsubsection{Personal Data Protection}
-\cite{Zyskind2015}
-
-\subsubsection{Personal Data Sharing and Patient Monitoring}
-\cite{Yue2016}
-
+\begin{itemize}
+	\item \cite{Dorri2017}
+	\item  \cite{Rowan2017}
+	\item \cite{Sharma2017}
+\end{itemize}
+\subsubsection{Personal Data Protection and Patient Monitoring}
+\begin{itemize}
+	\item \cite{Zyskind2015}
+	\item \cite{Yue2016}
+	\item \cite{Azaria2016}
+	\item \cite{Fotiou2016}
+	\item \cite{Zhang2017}
+	\item \cite{Zhang2018}
+	\item \cite{Esposito2018}
+	\item \cite{Ekblaw2016}
+	\item \cite{Cao2019}
+\end{itemize}
 \subsubsection{Smart Cities \& IoT}
-\cite{Biswas2016}
-\subsubsection{Communication}
-\cite{Rowan2017}
-\subsubsection{Power Transaction}
-\subsubsection{Data Exchange}
+\begin{itemize}
+	\item \cite{Biswas2016}
+	\item \cite{Mylrea2017}
+	\item \cite{Liang2018}
+	\item \cite{Dorri2017a}
+	\item \cite{Shafagh2017}
+\end{itemize}
 
