--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -1,3 +1,218 @@
+@article{DorriSteger2017,
+abstract = {Future smart vehicles will be part of the Internet of Things to offer beneficial development opportunities for both end users as well as the automotive industry. This will potentially expose smart vehicles to a range of security and privacy threats such as tracking or hijacking a vehicle while driving. A comprehensive security architecture for automotive systems is required to allow the development of new services while protecting the vehicles from attacks and ensuring the privacy of the end users. In this paper we argue that BlockChain (BC), a disruptive technology that has found many applications from cryptocurrency to smart contracts, is a potential solution to automotive security and privacy challenges. We propose a BC-based architecture to protect the privacy of the users and to increase the security of the vehicular eco-system. Wireless remote software updates and other emerging services in the automotive world such as dynamic vehicle insurance fees, are used to illustrate the utilization of the proposed security architecture. We also provide discussions on the security of the architecture against important attacks.},
+archivePrefix = {arXiv},
+arxivId = {1704.00073},
+author = {Dorri, Ali and Steger, Marco and Kanhere, Salil S. and Jurdak, Raja},
+doi = {10.1109/MCOM.2017.1700879},
+eprint = {1704.00073},
+file = {:Users/lenzbaumann/Library/Application Support/Mendeley Desktop/Downloaded/Dorri et al. - 2017 - BlockChain A Distributed Solution to Automotive Security and Privacy.pdf:pdf},
+isbn = {0163-6804},
+issn = {01636804},
+journal = {IEEE Communications Magazine},
+mendeley-groups = {ComSys Seminar},
+number = {12},
+pages = {119--125},
+title = {{BlockChain: A Distributed Solution to Automotive Security and Privacy}},
+volume = {55},
+year = {2017}
+}
+@article{Dorri2017,
+abstract = {Ehrlichia chaffeensis, the etiologic agent of human monocytic ehrlichiosis, is a tick-borne rickettsial pathogen that is infective to a wide range of mammals, including dogs and people. Amblyomma americanum, the lone star tick, is considered the primary vector of E. chaffeensis, but this pathogen has been detected in other tick species, including the brown dog tick, Rhipicephalus sanguineus. We hypothesized that the Arkansas strain of E. chaffeensis is infective to R. sanguineus, and used a novel PCR assay to test for acquisition of this pathogen by R. sanguineus and A. americanum ticks that were simultaneously fed on experimentally infected dogs. Although E. chaffeensis was not frequently detected in peripheral blood of these dogs, the pathogen was detected in both tick species and in canine lung, kidney, lymph node, bone marrow and frontal lobe samples. One dog (AFL) was maintained for several years, and ticks again acquired E. chaffeensis from this dog 566 days after intradermal inoculation with E. chaffeensis, but the pathogen was not detected in ticks fed on the same dog at 764 or 1086 days after the intradermal inoculation. {\textcopyright} 2014 Elsevier B.V.},
+author = {Dorri, Ali and Kanhere, Salil S. and Jurdak, Raja and Gauravaram, Praveen},
+doi = {10.1109/PERCOMW.2017.7917634},
+file = {:Users/lenzbaumann/Dropbox/Studium/FS19/ComSys Seminar/Papers/Applications/Smart Citites {\&} IoT//Dorri et al. - 2017 - Blockchain for IoT security and privacy The case study of a smart home.pdf:pdf},
+isbn = {9781509043385},
+issn = {18732542},
+journal = {2017 IEEE International Conference on Pervasive Computing and Communications Workshops, PerCom Workshops 2017},
+mendeley-groups = {ComSys Seminar},
+pages = {618--623},
+pmid = {24894131},
+publisher = {IEEE},
+title = {{Blockchain for IoT security and privacy: The case study of a smart home}},
+year = {2017}
+}
+@article{Sharma2017,
+abstract = {Nas {\'{u}}ltimas d{\'{e}}cadas, a rede ad hoc para ve{\'{i}}culos tem uma rede b{\'{a}}sica de tecnologias para proporcionar conforto e seguran{\c{c}}a aos motoristas em ambientes de ve{\'{i}}culos. No entanto, aplicativos e servi{\c{c}}os emergentes requerem mudan{\c{c}}as importantes nos modelos de rede e na computa{\c{c}}{\~{a}}o subjacentes que requerem um novo planejamento da rede rodovi{\'{a}}ria. Enquanto isso, a cadeia de blocos {\'{e}} conhecida como uma das tecnologias disruptivas surgiu nos {\'{u}}ltimos anos, est{\'{a}} experimentando um r{\'{a}}pido desenvolvimento e tem o potencial de revolucionar sistemas de transporte inteligentes. Blockchain pode ser usado para construir um sistema de transporte inteligente, seguro, distribu{\'{i}}do e aut{\^{o}}nomo. Permite uma melhor utiliza{\c{c}}{\~{a}}o da infra-estrutura e dos recursos dos sistemas de transporte inteligentes, particularmente eficaz para a tecnologia de crowdsourcing. Neste artigo, propomos uma rede de ve{\'{i}}culos baseada em cadeias de blocos na cidade inteligente (Block-VN). O Block-VN {\'{e}} uma arquitetura confi{\'{a}}vel e segura que opera de forma distribu{\'{i}}da para construir o novo sistema de gerenciamento de transporte distribu{\'{i}}do. Estamos considerando um novo sistema de rede de ve{\'{i}}culos, Block-VN, acima deles. Al{\'{e}}m disso, examinamos como a rede de ve{\'{i}}culos evolui com paradigmas focados em redes e informa{\c{c}}{\~{o}}es veiculares. Finalmente, discutimos os cen{\'{a}}rios do servi{\c{c}}o e os princ{\'{i}}pios de design do Block-VN.},
+author = {Sharma, Pradip Kumar and Moon, Seo Yeon and Park, Jong Hyuk},
+doi = {10.3745/JIPS.03.0065},
+file = {:Users/lenzbaumann/Dropbox/Studium/FS19/ComSys Seminar/Papers/Applications/Autonomous Vehicles/Sharma, Moon, Park - 2017 - Block-VN A distributed blockchain based vehicular network architecture in smart city.pdf:pdf},
+issn = {2092805X},
+journal = {Journal of Information Processing Systems},
+keywords = {Blockchain,Internet of things,Security,Vehicular network},
+mendeley-groups = {ComSys Seminar},
+number = {1},
+pages = {184--195},
+title = {{Block-VN: A distributed blockchain based vehicular network architecture in smart city}},
+volume = {13},
+year = {2017}
+}
+@article{Shafagh2017,
+abstract = {Today the cloud plays a central role in storing, processing, and distributing data. Despite contributing to the rapid development of IoT applications, the current IoT cloud-centric architecture has led into a myriad of isolated data silos that hinders the full potential of holistic data-driven analytics within the IoT. In this paper, we present a blockchain-based design for the IoT that brings a distributed access control and data management. We depart from the current trust model that delegates access control of our data to a centralized trusted authority and instead empower the users with data ownership. Our design is tailored for IoT data streams and enables secure data sharing. We enable a secure and resilient access control management, by utilizing the blockchain as an auditable and distributed access control layer to the storage layer. We facilitate the storage of time-series IoT data at the edge of the network via a locality-aware decentralized storage system that is managed with the blockchain technology. Our system is agnostic of the physical storage nodes and supports as well utilization of cloud storage resources as storage nodes.},
+archivePrefix = {arXiv},
+arxivId = {1705.08230},
+author = {Shafagh, Hossein and Burkhalter, Lukas and Hithnawi, Anwar and Duquennoy, Simon},
+eprint = {1705.08230},
+file = {:Users/lenzbaumann/Dropbox/Studium/FS19/ComSys Seminar/Papers/Applications/Smart Citites {\&} IoT/Shafagh et al. - 2017 - Towards Blockchain-based Auditable Storage and Sharing of IoT Data.pdf:pdf},
+isbn = {9781450352048},
+mendeley-groups = {ComSys Seminar},
+pages = {45--50},
+title = {{Towards Blockchain-based Auditable Storage and Sharing of IoT Data}},
+url = {http://arxiv.org/abs/1705.08230},
+year = {2017}
+}
+@article{Liang2018,
+abstract = {Today's storage systems expose abstractions which are either too low-level (e.g., key-value store, raw-block store) that they require developers to re-invent the wheels, or too high-level (e.g., relational databases, Git) that they lack generality to support many classes of applications. In this work, we propose and implement a general distributed data storage system, called UStore, which has rich semantics. UStore delivers three key properties, namely immutability, sharing and security, which unify and add values to many classes of today's applications, and which also open the door for new applications. By keeping the core properties within the storage, UStore helps reduce application development efforts while offering high performance at hand. The storage embraces current hardware trends as key enablers. It is built around a data-structure similar to that of Git, a popular source code versioning system, but it also synthesizes many designs from distributed systems and databases. Our current implementation of UStore has better performance than general in-memory key-value storage systems, especially for version scan operations. We port and evaluate four applications on top of UStore: a Git-like application, a collaborative data science application, a transaction management application, and a blockchain application. We demonstrate that UStore enables faster development and the UStore-backed applications can have better performance than the existing implementations.},
+archivePrefix = {arXiv},
+arxivId = {1702.02799},
+author = {Liang, Gaoqi and Weller, Steven R. and Luo, Fengji and Zhao, Junhua and Dong, Zhao Yang},
+doi = {10.1109/TSG.2018.2819663},
+eprint = {1702.02799},
+file = {:Users/lenzbaumann/Dropbox/Studium/FS19/ComSys Seminar/Papers/Applications/Smart Citites {\&} IoT/Liang et al. - 2018 - Distributed Blockchain-Based Data Protection Framework for Modern Power Systems against Cyber Attacks.pdf:pdf},
+isbn = {2016030116572},
+issn = {19493053},
+journal = {IEEE Transactions on Smart Grid},
+mendeley-groups = {ComSys Seminar},
+number = {c},
+pages = {1--12},
+title = {{Distributed Blockchain-Based Data Protection Framework for Modern Power Systems against Cyber Attacks}},
+volume = {3053},
+year = {2018}
+}
+@inproceedings{Biswas2016,
+abstract = {A smart city uses information technology to inte-grate and manage physical, social, and business infrastructures in order to provide better services to its dwellers while ensuring efficient and optimal utilization of available resources. With the proliferation of technologies such as Internet of Things (IoT), cloud computing, and interconnected networks, smart cities can deliver innovative solutions and more direct interaction and collaboration between citizens and the local government. Despite a number of potential benefits, digital disruption poses many challenges related to information security and privacy. This paper proposes a security framework that integrates the blockchain technology with smart devices to provide a secure communication platform in a smart city.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {Biswas, Kamanashis and Muthukkumarasamy, Vallipuram},
+booktitle = {14th IEEE International Conference on Smart City},
+doi = {10.1109/HPCC-SmartCity-DSS.2016.178},
+eprint = {arXiv:1011.1669v3},
+file = {:Users/lenzbaumann/Library/Application Support/Mendeley Desktop/Downloaded/Rivas-Murias, Rivas, Se{\~{n}}ar{\'{i}}s-Rodr{\'{i}}guez - 2012 - Synthesis, characterization and transport properties of Pr inf0.50infLn inf0.50infBa.pdf:pdf},
+isbn = {9781509042968},
+issn = {09258388},
+keywords = {,Cobalt oxides,Power factor,Sol-gel synthesis,Transport properties},
+mendeley-groups = {ComSys Seminar},
+pmid = {24439530},
+title = {{Securing Smart Cities Using Blockchain Technology Kamanashis}},
+year = {2016}
+}
+@inproceedings{Mylrea2017,
+abstract = {Our study examines how the mutualism between Atta colombica leaf-cutting ants and their cultivated fungus is influenced by the presence of diverse foliar endophytic fungi (endophytes) at high densities in tropical leaf tissues. We conducted laboratory choice trials in which ant colonies chose between Cordia alliodora seedlings with high (E(high)) or low (E(low)) densities of endophytes. The E(high) seedlings contained 5.5 times higher endophyte content and a greater diversity of fungal morphospecies than the E(low) treatment, and endophyte content was not correlated with leaf toughness or thickness. Leaf-cutting ants cut over 2.5 times the leaf area from E(low) relative to E(high) seedlings and had a tendency to recruit more ants to E(low) plants. Our findings suggest that leaf-cutting ants may incur costs from cutting and processing leaves with high endophyte loads, which could impact Neotropical forests by causing variable damage rates within plant communities.},
+author = {Mylrea, Michael and Gourisetti, Sri Nikhil Gupta},
+booktitle = {Proceedings - 2017 Resilience Week, RWS 2017},
+doi = {10.1109/RWEEK.2017.8088642},
+file = {:Users/lenzbaumann/Library/Application Support/Mendeley Desktop/Downloaded/Mylrea, Gourisetti - 2017 - Blockchain for smart grid resilience Exchanging distributed energy at speed, scale and security.pdf:pdf},
+isbn = {9781509060559},
+issn = {1744-957X},
+keywords = {,Blockchain,cryptography,cybersecurity,grid cybersecurity,resilience,smart contracts,smart grid,transactive energy},
+mendeley-groups = {ComSys Seminar},
+pages = {18--23},
+pmid = {20610420},
+title = {{Blockchain for smart grid resilience: Exchanging distributed energy at speed, scale and security}},
+year = {2017}
+}
+@article{Fotiou2016,
+abstract = {User, content, and device names as a security primitive have been an attractive approach especially in the context of Information-Centric Networking (ICN) architectures. We leverage Hierarchical Identity Based Encryption (HIBE) to build (content) name-based security mechanisms used for securely distributing content. In contrast to similar approaches, in our system each user maintains his own Private Key Generator used for generating the master secret key and the public system parameters required by the HIBE algorithm. This way our system does not suffer from the key escrow problem, which is inherent in many similar solutions. In order to disseminate the system parameters of a content owner in a fully distributed way, we use blockchains, a distributed, community managed, global list of transactions.},
+author = {Fotiou, Nikos and Polyzos, George C.},
+doi = {10.1109/INFCOMW.2016.7562112},
+file = {:Users/lenzbaumann/Dropbox/Studium/FS19/ComSys Seminar/Papers/Applications/Personal Data Sharing/Fotiou, Polyzos - 2016 - Decentralized name-based security for content distribution using blockchains.pdf:pdf},
+isbn = {9781467399555},
+issn = {0743166X},
+journal = {Proceedings - IEEE INFOCOM},
+mendeley-groups = {ComSys Seminar},
+pages = {415--420},
+title = {{Decentralized name-based security for content distribution using blockchains}},
+volume = {2016-Septe},
+year = {2016}
+}
+@article{Zhang2017,
+abstract = {Use Case {\#}1 : Drug Traceability What is the problem? Drug counterfeiting is a major problem in the pharmaceutical industry. Here are some metrics},
+author = {Zhang, Peng and Schmidt, Douglas C. and White, Jules},
+file = {:Users/lenzbaumann/Dropbox/Studium/FS19/ComSys Seminar/Papers/Applications/Personal Data Sharing/Zhang, Schmidt, White - 2017 - Blockchain Use Cases in Healthcare.pdf:pdf},
+keywords = {blockchain in healthcare,healthcare interoperability,smart contracts},
+mendeley-groups = {ComSys Seminar},
+title = {{Blockchain Use Cases in Healthcare}},
+year = {2017}
+}
+@article{Esposito2018,
+abstract = {One particular trend observed in healthcare is the progressive shift of data and services to the cloud, partly due to convenience (e.g. availability of complete patient medical history in real-time) and savings (e.g. economics of healthcare data management). There are, however, limitations to using conventional cryptographic primitives and access control models to address security and privacy concerns in an increasingly cloud-based environment. In this paper, we study the potential to use the Blockchain technology to protect healthcare data hosted within the cloud. We also describe the practical challenges of such a proposition and further research that is required.},
+author = {Esposito, Christian and {De Santis}, Alfredo and Tortora, Genny and Chang, Henry and Choo, Kim Kwang Raymond},
+doi = {10.1109/MCC.2018.011791712},
+file = {:Users/lenzbaumann/Dropbox/Studium/FS19/ComSys Seminar/Papers/Applications/Personal Data Sharing/Esposito et al. - 2018 - Blockchain A Panacea for Healthcare Cloud-Based Data Security and Privacy.pdf:pdf},
+isbn = {2325-6095},
+issn = {23256095},
+journal = {IEEE Cloud Computing},
+mendeley-groups = {ComSys Seminar},
+number = {1},
+pages = {31--37},
+publisher = {Published by the IEEE Computer Society},
+title = {{Blockchain: A Panacea for Healthcare Cloud-Based Data Security and Privacy?}},
+volume = {5},
+year = {2018}
+}
+@article{Ekblaw2016,
+abstract = {Analysis of cDNA clones that cross-hybridized with the fork head domain of the rat HNF-3 gene family revealed 10 cDNAs from human fetal brain and human testis cDNA libraries containing this highly conserved DNA-binding domain. Three of these cDNAs (HFK1, HFK2, and HFK3) were further analyzed. The cDNA HFK1 has a length of 2557 nucleotides and shows strong homology at the nucleotide level (91.2{\%}) to brain factor 1 (BF-1) from rat. The HFK1 cDNA codes for a putative 476 amino acid protein. The homology to BF-1 from rat in the coding region at the amino acid level is 87.5{\%}. The fork head homologous region includes 111 amino acids starting at amino acid 160 and has a 97.5{\%} homology to BF-1. Southern hybridization revealed that HFK1 is highly conserved among mammalian species and possibly birds. Northern analysis with total RNA from human tissues and poly(A)-rich RNA from mouse revealed a 3.2-kb transcript that is present in human and mouse fetal brain and in adult mouse brain. In situ hybridization with sections of mouse embryo and human fetal brain reveals that HFK1 expression is restricted to the neuronal cells in the telencephalon, with strong expression being observed in the developing dentate gyrus and hippocampus. HFK1 was chromosomally localized by in situ hybridization to 14q12. The cDNA clones HFK2 and HFK3 were analyzed by restriction analysis and sequencing. HFK2 and HFK3 were found to be closely related but different from HFK1. Therefore, it would appear that HFK1, HFK2, HFK3, and BF-1 form a new fork head related subfamily.},
+author = {Ekblaw, Ariel and Azaria, Asaph and Halamka, John D and Lippman, Andrew},
+doi = {10.1080/10556780410001647203},
+file = {:Users/lenzbaumann/Dropbox/Studium/FS19/ComSys Seminar/Papers/Applications/Personal Data Sharing/Ekblaw et al. - 2016 - A Case Study for Blockchain in Healthcare MedRecprototype for electronic health records and medical research data.pdf:pdf},
+isbn = {1055-6788},
+issn = {10556788},
+journal = {Proceedings of IEEE Open {\&} Big Data Conference},
+mendeley-groups = {ComSys Seminar},
+pages = {13},
+pmid = {7959731},
+title = {{A Case Study for Blockchain in Healthcare: "MedRec"prototype for electronic health records and medical research data}},
+url = {https://www.healthit.gov/sites/default/files/5-56-onc{\_}blockchainchallenge{\_}mitwhitepaper.pdf},
+volume = {13},
+year = {2016}
+}
+@article{Cao2019,
+author = {Cao, Sheng and Zhang, Gexiang and Liu, Pengfei and Zhang, Xiaosong and Neri, Ferrante},
+doi = {10.1016/j.ins.2019.02.038},
+file = {:Users/lenzbaumann/Dropbox/Studium/FS19/ComSys Seminar/Papers/Applications/Personal Data Sharing/Cao et al. - 2019 - Cloud-assisted secure eHealth systems for tamper-proofing EHR via blockchain.pdf:pdf},
+issn = {00200255},
+journal = {Information Sciences},
+keywords = {Blockchain,Electronic health recor,eHealth systems},
+mendeley-groups = {ComSys Seminar},
+pages = {427--440},
+publisher = {Elsevier Inc.},
+title = {{Cloud-assisted secure eHealth systems for tamper-proofing EHR via blockchain}},
+url = {https://linkinghub.elsevier.com/retrieve/pii/S0020025519301471},
+volume = {485},
+year = {2019}
+}
+@article{Zhang2018,
+abstract = {Secure and scalable data sharing is essential for collaborative clinical decision making. Conventional clinical data efforts are often siloed, however, which creates barriers to efficient information exchange and impedes effective treatment decision made for patients. This paper provides four contributions to the study of applying blockchain technology to clinical data sharing in the context of technical requirements defined in the “Shared Nationwide Interoperability Roadmap” from the Office of the National Coordinator for Health Information Technology (ONC). First, we analyze the ONC requirements and their implications for blockchain-based systems. Second, we present FHIRChain, which is a blockchain-based architecture designed to meet ONC requirements by encapsulating the HL7 Fast Healthcare Interoperability Resources (FHIR) standard for shared clinical data. Third, we demonstrate a FHIRChain-based decentralized app using digital health identities to authenticate participants in a case study of collaborative decision making for remote cancer care. Fourth, we highlight key lessons learned from our case study.},
+archivePrefix = {arXiv},
+arxivId = {1807.03227},
+author = {Zhang, Peng and White, Jules and Schmidt, Douglas C. and Lenz, Gunther and Rosenbloom, S. Trent},
+doi = {10.1016/j.csbj.2018.07.004},
+eprint = {1807.03227},
+file = {:Users/lenzbaumann/Dropbox/Studium/FS19/ComSys Seminar/Papers/Applications/Personal Data Sharing/Zhang et al. - 2018 - FHIRChain Applying Blockchain to Securely and Scalably Share Clinical Data.pdf:pdf},
+issn = {20010370},
+journal = {Computational and Structural Biotechnology Journal},
+mendeley-groups = {ComSys Seminar},
+pages = {267--278},
+pmid = {30108685},
+publisher = {The Authors},
+title = {{FHIRChain: Applying Blockchain to Securely and Scalably Share Clinical Data}},
+url = {https://doi.org/10.1016/j.csbj.2018.07.004},
+volume = {16},
+year = {2018}
+}
+@article{Azaria2016,
+abstract = {{\textcopyright} 2016 IEEE.Years of heavy regulation and bureaucratic inefficiency have slowed innovation for electronic medical records (EMRs). We now face a critical need for such innovation, as personalization and data science prompt patients to engage in the details of their healthcare and restore agency over their medical data. In this paper, we propose MedRec: a novel, decentralized record management system to handle EMRs, using blockchain technology. Our system gives patients a comprehensive, immutable log and easy access to their medical information across providers and treatment sites. Leveraging unique blockchain properties, MedRec manages authentication, confidentiality, accountability and data sharing - crucial considerations when handling sensitive information. A modular design integrates with providers' existing, local data storage solutions, facilitating interoperability and making our system convenient and adaptable. We incentivize medical stakeholders (researchers, public health authorities, etc.) to participate in the network as blockchain "miners". This provides them with access to aggregate, anonymized data as mining rewards, in return for sustaining and securing the network via Proof of Work. MedRec thus enables the emergence of data economics, supplying big data to empower researchers while engaging patients and providers in the choice to release metadata. The purpose of this short paper is to expose, prior to field tests, a working prototype through which we analyze and discuss our approach.},
+author = {Azaria, Asaph and Ekblaw, Ariel and Vieira, Thiago and Lippman, Andrew},
+doi = {10.1109/OBD.2016.11},
+file = {:Users/lenzbaumann/Dropbox/Studium/FS19/ComSys Seminar/Papers/Applications/Personal Data Sharing/Azaria et al. - 2016 - MedRec Using blockchain for medical data access and permission management.pdf:pdf},
+isbn = {9781509040544},
+issn = {9781509040544},
+journal = {Proceedings - 2016 2nd International Conference on Open and Big Data, OBD 2016},
+mendeley-groups = {ComSys Seminar},
+pages = {25--30},
+pmid = {7959731},
+title = {{MedRec: Using blockchain for medical data access and permission management}},
+year = {2016}
+}
 @misc{Lunn2015,
 author = {Lunn, Bernard},
 booktitle = {Daily Fintech},
